--- a/app/assets/stylesheets/users/show.css.erb
+++ b/app/assets/stylesheets/users/show.css.erb
@@ -10,7 +10,7 @@
   background-color:rgba(0,0,0,0.3);
   height:100%;
   padding:10px 20px;
-  width:300px;
+  width:20%;
   /*border-right:1px solid #fff;*/
 
 }
@@ -109,10 +109,6 @@
   position: relative;
   width: 256px;
   transition: all 0.3s;
-  span {
-    transition: all 0.3s;
-    tranform: scale(1, 1);
-  }
 }
 
 .user-relationship > a::before, .user-relationship > a::after, .user-crew > a::before, .user-crew > a::after , .user-edit > a::before, .user-edit > a::after, .user-about > a::before, .user-about > a::after {
@@ -151,7 +147,7 @@
 
 /*中央右*/
 .mypage-right-contents {
-  width:calc(100% - 300px);
+  width:80%;
   padding:0 20px;
   height:100%;
 }
@@ -365,36 +361,68 @@
 }
 
 @media (max-width: 1024px) {
+  .mypage-wrapper {
+    flex-direction: column;
+    height:100%;
+  }
   .mypage-left-contents {
-    width:30%;
+    width:100%;
     padding:5px;
+    display: flex;
+  }
+  .mypage-right-contents {
+    width:100%;
+    height:80vh;
+  }
+  .mypage-place-show {
+  width:100%;
+    height: auto;
   }
   .user-image {
     height:30%;
+    width:30%;
+    margin:0 50px;
+  }
+  .user-image2 {
+    margin:0 50px;
+  }
+  .user-image3 {
+    margin:0 50px;
+  }
+  .user-image4 {
+    margin:0 50px;
+  }
+  .user-image5 {
+    margin:0 50px;
+  }
+  .user-image6 {
+    margin:0 50px;
   }
   .user-icon {
-    height:100%;
+    height:90%;
+  }
+  .user-profile {
+    height: 100%;
+    width:60%;
+    display:flex;
+    flex-wrap: wrap;
   }
   .user-nickname {
     font-size:20px;
-    height:33%;
+    height:30%;
   }
+  .user-dance-level {
+    height:30%;
   .user-crew {
     font-size:15px;
     height:33%;
   }
   .user-edit {
     font-size:15px;
-    height:33%;
-  }
-  .mypage-right-contents {
-    width:70%;
-  }
-  .mypage-place-show {
-  width:100%;
-  height:20%;
+    height:33% ;
   }
 }
+
 @media (max-width: 599px) {
   .mypage-wrapper {
     display:block;
@@ -408,6 +436,27 @@
     padding:0 5px;
   }
   .mypage-place-show {
-  width:100%;
+    width:100%;
+  }
+  .user-image {
+    margin:0;
+  }
+  .user-image2 {
+    margin:0;
+  }
+  .user-image3 {
+    margin:0;
+  }
+  .user-image4 {
+    margin:0;
+  }
+  .user-image5 {
+    margin:0;
+  }
+  .user-image6 {
+    margin:0;
+  }
+  .user-follow {
+    height: 30%;
   }
 }
