--- a/app/assets/stylesheets/messages/new.css
+++ b/app/assets/stylesheets/messages/new.css
@@ -164,10 +164,6 @@
   height: 64px;
   line-height: 64px;
   transition: all 0.3s;
-  span {
-    transition: all 0.3s;
-    tranform: scale(1, 1);
-  }
 }
 
 .exit > a::before, .exit > a::after {
@@ -323,10 +319,12 @@
     width:30%;
   }
   .side-header {
-    display:flex;
-    justify-content: center;
-    flex-direction:column;
-    align-items: center;
+    display: flex;
+    justify-content: space-around;
+    flex-direction: row;
+  }
+  .header-message-icon {
+    height:72%;
   }
   .place-content-list {
     font-size:15px;
@@ -334,6 +332,9 @@
   }
   .main-chat {
     width:70%;
+  }
+  .main-main {
+    height: calc(100vh - 190px);
   }
   .title {
     font-size:20px;
@@ -353,7 +354,11 @@
     width:60%;
   }
   .exit > a {
+    width:auto;
     padding:5px;
+  }
+  .message-icon {
+    width: 15%;
   }
 }
 @media (max-width: 599px) {
